// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variable export-variable.ts 1`] = `
Object {
  "nodes": Array [
    VariableParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "id": "EXPORT_VARIABLE",
      "type": "string",
    },
  ],
}
`;

exports[`variable variable-docs.ts 1`] = `
Object {
  "nodes": Array [
    VariableParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "id": "FOO",
      "type": "string",
    },
  ],
}
`;

exports[`variable variable-type.ts 1`] = `
Object {
  "nodes": Array [
    VariableParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "id": "FOO",
      "type": "number",
    },
    VariableParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "id": "BAR",
      "type": "number",
    },
    VariableParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "id": "BAZ",
      "type": "string",
    },
    VariableParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "id": "QUOZ",
      "type": "string",
    },
  ],
}
`;
